Version 1.6.2
    * not yet released
    * workaround for servers not understanding TLSv1 handshake
    * fixed: issues detected by scan.coverity.com
    * fixed: showing more default search engines with same name
    * fixed: small fix in loading previews in speeddial

Version 1.6.1
    * released 26 January 2014
    * added option to disable inline completion in locationbar
    * added option to always switch tabs with mouse wheel
    * added option to toggle fullscreen with commandline option
    * added undo/redo context menu actions in editable web elements
    * speedup loading rules from subscriptions in AdBlock dialog
    * fixed speed dial with disabled javascript
    * fixed showing tooltips on tabs when tab previews are disabled
    * fixed search shortcuts longer than one character in locationbar
    * fixed building issues on OS X and OS/2
    * fixed disabling tab previews from preferences
    * fixed building new Gnome/KDE keyring passwords
    * fixed building StatusBarIcons plugin on Windows
    * win: add new jumplist option to open private window

Version 1.6.0
    * released 1 January 2014
    * added support for Proxy Auto-Config (PAC)
    * added option to open another private window from private window
    * added option to detach tabs from window
    * added delete action in edit context menu on page
    * added possibility to remove EasyList from AdBlock
    * added inline domain completion to urlbar
    * added KWallet password backend plugin
    * added Gnome-Keyring password backend plugin
    * added StatusBar Icons plugin that adds extra icons to statusbar
    * added support for POST method in search engines manager
    * added context menu for translating webpage
    * added possibility to export bookmarks to html file
    * great performance improvement for matching basic rules in AdBlock
    * themes can now be loaded from profile directories
    * pagescreen can now save output into number of formats, including PDF